// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationOrderNumberDisplay should render correctly 1`] = `
<Styled(View)>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      dataLocator=""
      fontSize="fs16"
      fontWeight="black"
      margin={null}
      mobilefontFamily="secondary"
      numberOfLines={null}
      text="undefined undefined"
      textDecoration={null}
    />
  </Styled(View)>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      dataLocator=""
      fontSize="fs22"
      fontWeight="extrabold"
      margin={null}
      mobilefontFamily="secondary"
      numberOfLines={null}
      text="Thu. Jan 1 - Thu. Jan 1"
      textAlign="center"
      textDecoration={null}
    />
  </Styled(View)>
  <Styled(View)>
    <ConfirmationItemDisplay
      boldFont={false}
      isLink={true}
      title=""
    >
      <Styled(Anchor)
        accessibilityLabel=""
        anchorVariation=""
        colorName={null}
        customStyle={Object {}}
        locator=""
        onPress={[Function]}
        text=""
        underline={true}
        visible={false}
      />
    </ConfirmationItemDisplay>
    <ConfirmationItemDisplay
      boldFont={false}
      isLink={false}
      title=""
    />
    <ConfirmationItemDisplay
      boldFont={true}
      isLink={false}
      title=""
    >
      undefined 23.34
    </ConfirmationItemDisplay>
  </Styled(View)>
</Styled(View)>
`;

exports[`ConfirmationOrderNumberDisplay should render correctly with BOPIS 1`] = `
<Styled(View)>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      dataLocator=""
      fontSize="fs16"
      fontWeight="black"
      margin={null}
      mobilefontFamily="secondary"
      numberOfLines={null}
      text="2 undefined"
      textDecoration={null}
    />
  </Styled(View)>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      dataLocator=""
      fontSize="fs22"
      fontWeight="extrabold"
      margin={null}
      mobilefontFamily="secondary"
      numberOfLines={null}
      text="undefined Oct 11"
      textAlign="center"
      textDecoration={null}
    />
  </Styled(View)>
  <Styled(View)>
    <ConfirmationItemDisplay
      boldFont={false}
      isLink={true}
      title=""
    >
      <Styled(Anchor)
        accessibilityLabel=""
        anchorVariation=""
        colorName={null}
        customStyle={Object {}}
        locator=""
        onPress={[Function]}
        text=""
        underline={true}
        visible={false}
      />
    </ConfirmationItemDisplay>
    <ConfirmationItemDisplay
      boldFont={false}
      isLink={false}
      title=""
    />
    <ConfirmationItemDisplay
      boldFont={true}
      isLink={false}
      title=""
    >
      undefined 23.00
    </ConfirmationItemDisplay>
  </Styled(View)>
</Styled(View)>
`;
